# langgraph_knowledge_research

./: .gitignore
a2a_agent/: pyproject.toml
a2a_agent/src/: main.py  test_client.py
a2a_agent/src/currency_agent/: agent.py  agent_executor.py
agents/: Dockerfile  pyproject.toml
agents/src/: test_deepagent.py  test_mcp.py
agents/src/agents/: __init__.py  base_research_agent.py
agents/src/graph/: __init__.py
agents/src/models/: model.py
agents/src/prompts/: planning.py  research.py
agents/src/states/: deep_research_state.py
agents/src/tools/: __init__.py
mcp_tools/src/: server.py
mcp_tools/src/tools/: duckduckgo.py
